...
            VStack {
                Spacer()
                
                // Display the main title of the application
                Text("Pocket Cookbook")
                    .font(.system(size: 24, weight: .bold)) // Set font to system font and size to 24
                    .accessibilityIdentifier("titleLabel") // Accessibility identifier for UI testing
                
                Spacer()
                
                // Create a navigation link to navigate to RecipeTableView when the button is tapped
                NavigationLink(destination: RecipeTableView()) {
                    // Button appearance. Sets the button's color, size, text, and roundness
...
                    Text("View Desserts")
                        .frame(width: 200, height: 50)
                        .background(Color.red)
                        .foregroundColor(.white)
                        .cornerRadius(10)
                }
                .accessibilityIdentifier("nextButton") // Accessibility identifier for the button
            
                Spacer()
            }
            .navigationTitle("Main Menu") // Set the navigation bar title
            .navigationBarHidden(true) // Hide the navigation bar
            .background(Color(.systemBackground)) // Set the background color to the system background color
...
