...
                        //Put the name of the recipe into the row after the image
                        Text(recipe.name.capitalized)
                    }
                }
                .accessibilityIdentifier(recipe.name.capitalized) // Accessibility identifier for the list item
            }
            .accessibilityIdentifier("recipeTableView") // Accessibility identifier for the table view
            .navigationTitle("Recipes") // Set the navigation bar title
            .task {
                await viewModel.fetchRecipes() // Fetch recipes when the view appears
            }
            .alert(item: $viewModel.error) { error in
                // Display an alert if an error occurs
...
